added registeration functionality

--- a/dr_sounds/app/src/main/AndroidManifest.xml
+++ b/dr_sounds/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".InitLogin"
             android:label="Doctor_Screen">
         </activity>
         <activity
